# spec-driven-todo-app

./: CLAUDE.md  PLAN_SUMMARY_010.md  README.md  VERIFY_RESTORATION.sh
phase_01/: .gitignore  README.md  pyproject.toml
phase_01/.specify/memory/: constitution.md
phase_01/history/prompts/001-console-todo-app/: 0001-console-todo-app-specification.spec.prompt.md  0002-console-todo-app-implementation-plan.plan.prompt.md  0003-console-todo-app-task-generation.tasks.prompt.md  0004-console-todo-app-full-implementation.green.prompt.md
phase_01/history/prompts/constitution/: 0001-initial-constitution-v1-0-0.constitution.prompt.md
phase_01/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
phase_01/specs/001-console-todo-app/checklists/: requirements.md
phase_01/src/: main.py
phase_01/src/models/: task.py
phase_01/src/services/: task_manager.py
phase_01/src/ui/: console.py  menu.py
phase_02/backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  reset_database.py
phase_02/backend/alembic/versions/: 49f3dd53d60e_initial_schema_for_better_auth.py
phase_02/backend/src/: main.py
phase_02/backend/src/api/: deps.py  health.py  tasks.py  verification.py
phase_02/backend/src/core/: middleware.py  security.py
phase_02/backend/src/db/: session.py
phase_02/backend/src/models/: auth.py  user.py
phase_02/backend/src/schemas/: auth.py
phase_02/backend/src/services/: auth_service.py  task_service.py
phase_02/backend/tests/integration/: test_db_conn.py
phase_02/backend/tests/unit/: test_security.py
(+479 files in other folders)
